# boring-ui

./: .dockerignore  .gitignore  .npmignore  .stylelintrc.json  .tmp_chat_probe.mjs  .tmp_pw_verify.mjs  AGENTS.md  AGENT_CHAT_VISUAL_PROOF.md  CHANGELOG.md  CHAT_INTERACTION_TEST_REPORT.md  CHAT_PROVIDERS_TEST_REPORT.md  COMPLETE_ARCHITECTURE.md  COMPREHENSIVE_SANDBOX_TEST_REPORT.md  DEMO_RESULTS.md  EPIC-CHAT-UI-PHASE2-REPORT.md  EPIC-CHAT-UI-PLAN.md  EPIC-CLAUDE-CODE-CHAT-UI.md  EPIC-COMPLETION-REPORT.md  EPIC-UI-UX-EXCELLENCE.md  EPIC-UI-UX-REVIEW.md  EXTENSIBILITY_PLAN.md  FINAL_PROOF_REPORT.md  FINAL_TEST_REPORT.md  FOUR_CHAT_PROVIDERS_TEST_REPORT.md  HONEST_CHAT_TEST_REPORT.md  IDENTITY.md  INTEGRATION-TEST-REPORT.md  MIGRATION_PLAN.md  OPERATIONAL_RUNBOOKS.md  PROOF_SUMMARY.md  QUICK_START.md  README.md  REMOTE_SANDBOX_SETUP.md  REPORT_SUMMARY.txt  RESTART_PLAN.md  REVIEW_REQUEST.md  RODNEY_SPRITES_DEMO.md  SANDBOX_AGENT_FIX_PROOF.md  SANDBOX_AGENT_FIX_REPORT.md  SANDBOX_CHAT_PROOF_REPORT.md  (+52 more)
.beads/: .gitignore  issues.jsonl
.beads.old/: issues.jsonl
.claude/: settings.json
.evidence/: bd-13s7.md  bd-1a48.md  bd-1dsu-pi-reactivity-v3.md  bd-1dsu-pi-reactivity.md  bd-1q50-review-fix.md  bd-1q50-verified.md  bd-1wi2.1.1.md  bd-1wi2.1.2.md  bd-1wi2.2.1.md  bd-1wi2.3.3.md  bd-25ym.md  bd-25ym.verified.md  bd-2e4o.md  bd-2e4o.verified.md  bd-2fxd.md  bd-2x18.md  bd-2x18.verified.md  bd-30zp.md  bd-3g1g.5.5.md  bd-3g1g.5.md  bd-3g1g.6.1.md  bd-3g1g.6.1.verified.md  bd-3g1g.6.3.md  bd-3g1g.6.3.verified.md  bd-3g1g.6.4.md  bd-3g1g.6.4.verified.md  bd-3g1g.6.5.md  (+15 more)
(+1703 files in other folders)
